# mrab-regex

./: MANIFEST.in  changelog.txt  pyproject.toml
.github/workflows/: main.yml
regex/: _main.py
regex_3/: _regex.c  _regex_core.py  _regex_unicode.c  regex.py  test_regex.py
src/: _regex.c
